--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2>About</h2>
               <p class= "lead mb-5"> Education: University of Mary Washington, Fredericksburg, VA Scheduled Graduation May 2018 </p>
               <p class= "lead mb-5"> Bachelor of Arts, Communications and Digital Studies Including coursework in Small Group Communications, Digital Storytelling, and Applied Digital Studies. </p>
-              <p class="lead mb-5">Communications student with exceptional people skills, experience in social media media management, and website design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
+              <p class="lead mb-5">Communications major with exceptional people skills, experience in social media media management, and website design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
             
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Check out my job history!</a>
           </div>
@@ -112,7 +112,7 @@
               <p> Fredericksburg, VA Fall 2016-Present</p>
             <p class="text-faded mb-0">●  Ensure students with disabilities receive fair and just treatment</p>
             <p class="text-faded mb-0">● Assist students with disabilities access resources that help them succeed</p>
-            <p class="text-faded mb-0">● Organize the office in an efficient manner so students needs are best met</p>
+            <p class="text-faded mb-0">● Organize the office in an efficient manner to meet student's needs</p>
             <p class="text-faded mb-0">● Organize and create video that the office can use for professor training that highlight the office's capablities
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -125,7 +125,7 @@
                <p>Intern</p>
                <p> Sterling, VA September 2015 – December 2016</p>
             <p class="text-faded mb-0">●  Office administration</p>
-            <p class="text-faded mb-0">● Provided excellent customer service interaction with the firm’s clients</p>
+            <p class="text-faded mb-0">● Provided excellent customer service interaction with firm’s clients</p>
             <p class="text-faded mb-0">● Establish case storage and closing of case files</p>
             <p class="text-faded mb-0">● Answered all incoming communication and routed them to the appropriate staff</p>
           </div>
@@ -138,9 +138,9 @@
             </h4>
                <p>Team Lead</p>
                <p> Herndon, VA Summer 2015</p>
-            <p class="text-faded mb-0">●Coordinate activities that boost staff morale and efficiency</p>
+            <p class="text-faded mb-0">●Coordinated activities to boost staff morale and efficiency</p>
             <p class="text-faded mb-0">●  Baked a tasty and quality product for our customers</p>
-            <p class="text-faded mb-0">●  Requires skills of multitasking, conflict resolution, and maintaining a positive attitude</p>
+            <p class="text-faded mb-0">●  Utilized skills of multitasking, conflict resolution, and maintaining a positive attitude</p>
           </div>
     </section>
 
