--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
             </h4>
              <p>Manager</p>
               <p> DC, Summer 2016-Present</p>
-            <p class="text-faded mb-0">● Organize shows for the band to play</p>
+            <p class="text-faded mb-0">● Organized shows for the band to play</p>
             <p class="text-faded mb-0">● Answered Incoming communications that the band would recive through various social medias</p>
-            <p class="text-faded mb-0">● Organize and check times and locations where band would play</p>
-            <p class="text-faded mb-0">● Hopfully, Create promtional images for upcoming shows</p>
+            <p class="text-faded mb-0">● Organized and checked times and locations where band would play</p>
              </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon mx-auto mb-3">
@@ -110,10 +109,10 @@
             </h4>
               <p> Intern </p>
               <p> Fredericksburg, VA Fall 2016-Present</p>
-            <p class="text-faded mb-0">●  Ensure students with disabilities receive fair and just treatment</p>
-            <p class="text-faded mb-0">● Assist students with disabilities access resources that help them succeed</p>
-            <p class="text-faded mb-0">● Organize the office in an efficient manner to meet student's needs</p>
-            <p class="text-faded mb-0">● Organize and create video that the office can use for professor training that highlight the office's capablities
+            <p class="text-faded mb-0">●  Ensured students with disabilities receive fair and just treatment</p>
+            <p class="text-faded mb-0">● Assisted students with disabilities access resources that help them succeed</p>
+            <p class="text-faded mb-0">● Organized the office in an efficient manner to meet student's needs</p>
+            <p class="text-faded mb-0">● Organized and created videos that the office can use for professor training that highlight the office's capablities
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon mx-auto mb-3">
@@ -126,7 +125,7 @@
                <p> Sterling, VA September 2015 – December 2016</p>
             <p class="text-faded mb-0">●  Office administration</p>
             <p class="text-faded mb-0">● Provided excellent customer service interaction with firm’s clients</p>
-            <p class="text-faded mb-0">● Establish case storage and closing of case files</p>
+            <p class="text-faded mb-0">● Established case storage and closing of case files</p>
             <p class="text-faded mb-0">● Answered all incoming communication and routed them to the appropriate staff</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
