--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
              <img class="img-fluid" src="img/baberage.jpg" alt="">
             </span>
             <h4>
-              <strong>BabeRage</strong>
+              <strong>BabeRage, a Local DC Band</strong>
             </h4>
              <p>Manager</p>
               <p> DC, Summer 2016-Present</p>
