--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
               <i class="icon-social-instagram"></i>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white" href=""mailto:bobby.d.odonnell@gmail.com"">
+              <i class="icon-social-email"></i>
+            </a>
+          </li>
         </ul>
         <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
       </div>
