--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
+      <section class="content-section bg-light" id="Contact">
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
