--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href=""mailto:bobby.d.odonnell@gmail.com"">
-              <i class="icon-social-email"></i>
+            <a class="social-link rounded-circle text-white" href="mailto:bobby.d.odonnell@gmail.com">
+              <i class="icon-social-mail"></i>
             </a>
           </li>
         </ul>
