--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </li>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="mailto:bobby.d.odonnell@gmail.com">
-              <i class="fa fa-envelope"></i>
+              <i class="icon-social-envelope"></i>
             </a>
           </li>
         </ul>
