--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="mailto:bobby.d.odonnell@gmail.com">
+            <a class="social-link rounded-circle text-white" href="mailto:bobby.d.odonnell@gmail.com">
               <i class="icon-social-envelope"></i>
             </a>
           </li>
