--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
     </section>
 
     <!-- Footer -->
-    <section class="content-section bg-light" id="Contact">
     <footer class="footer text-center">
       <div class="container">
         <ul class="list-inline mb-5">
@@ -233,7 +232,7 @@
           </li>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white" href="mailto:bobby.d.odonnell@gmail.com">
-              <i class="icon-social-mail"></i>
+              <i class="icon-social-envelope"></i>
             </a>
           </li>
         </ul>
