--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
+    <section class="content-section bg-light" id="contact">
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
@@ -231,7 +232,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="mailto:bobby.d.odonnell@gmail.com">
+            <a class="social-link rounded-circle text-white mr-3" href="mailto:bobby.d.odonnell@gmail.com">
               <i class="icon-social-envelope"></i>
             </a>
           </li>
