--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">Bobby's Portfolio</h1>
         <h3 class="mb-5">
-          <em>A showcase of my talents and what I can bring to your team</em>
+          <em>Showcase of my talents and what I can bring to your team</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
       </div>
@@ -71,7 +71,7 @@
             <h2>About</h2>
               <p class= "lead mb-5"> Education: University of Mary Washington, Fredericksburg, VA Scheduled Graduation May 2018 </p>
               <p class= "lead mb-5"> Bachelor of Arts, Communications and Digital Studies Including coursework in Small Group Communications, Digital Storytelling, and Applied Digital Studies. </p>
-              <p class="lead mb-5">Communications major with exceptional people skills, experience in social media media management, and website design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
+              <p class="lead mb-5">Communications major with exceptional people skills, experience in social media media management, and digital design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
             
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Check out my job history!</a>
           </div>
@@ -92,7 +92,7 @@
              <img class="img-fluid" src="img/baberage.jpg" alt="">
             </span>
             <h4>
-              <strong>BabeRage, a Local DC Band</strong>
+              <strong>BabeRage, Local DC Band</strong>
             </h4>
              <p>Manager</p>
               <p> DC, Summer 2016-Present</p>
