--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
-   <section class="content-section bg-primary text-white text-center" id="contact">
+   <section class="content-section text-center" id="contact">
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
