--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
             <p class="text-faded mb-0">●  Utilized skills of multitasking, conflict resolution, and maintaining a positive attitude</p>
           </div>
     </section>
-
+    <!-- Hobbies/Clubs -->
+         <section class="content-section bg-primary text-white text-center" id="hobbies">
+      <div class="container">
+        <div class="content-section-heading">
+          <h3 class="text-secondary mb-0"></h3>
+          <h2 class="mb-5">Hobbies/Clubs</h2>
+        </div>   
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
