--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0"></h3>
           <h2 class="mb-5">Hobbies/Clubs</h2>
-        </div>   
+        </div> 
+           </div>
+        </section>
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
