--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <a class="js-scroll-trigger" href="#services">Resume</a>
         </li>
         <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#hobbies">Hobbies/Clubs</a>
+        </li>
+        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="sidebar-nav-item">
@@ -148,6 +151,24 @@
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0"></h3>
           <h2 class="mb-5">Hobbies/Clubs</h2>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <h4>
+              <p>UMW Young Democrats</p>
+            </h4>
+               <p>Publicity Chair and Historian</p>
+            <p class="text-faded mb-0">●Managed all of club's social media accounts</p>
+            <p class="text-faded mb-0">●Organized and promoted club events</p>
+            <p class="text-faded mb-0">●Documented any club events</p>
+            <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon mx-auto mb-3">
+              <img class="img-fluid" src="img/duck.jpg" alt="">
+            </span>
+            <h4>
+              <p>UMW Radio</p>
+            </h4>
+               <p>Talk Show Host</p>
+            <p class="text-faded mb-0">●Host of a weekly radio show</p>
+            <p class="text-faded mb-0">●Planned topics and organized content to disscus on show</p>
         </div> 
            </div>
         </section>
