--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
             <p class="text-faded mb-0">●Managed all of club's social media accounts</p>
             <p class="text-faded mb-0">●Organized and promoted club events</p>
             <p class="text-faded mb-0">●Documented any club events</p>
+          </div>
+          
             <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <h4>
               <p>UMW Radio</p>
@@ -166,6 +168,7 @@
                <p>Talk Show Host</p>
             <p class="text-faded mb-0">●Host of a weekly radio show</p>
             <p class="text-faded mb-0">●Planned topics and organized content to disscus on show</p>
+          </div>
            </div>
         </section>
     <!-- Portfolio -->
