--- a/index.html
+++ b/index.html
@@ -148,9 +148,17 @@
     <!-- Hobbies/Clubs -->
          <section class="content-section bg-primary text-white text-center" id="hobbies">
       <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon mx-auto mb-3">
+            </span>
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0"></h3>
           <h2 class="mb-5">Hobbies/Clubs</h2>
+                  <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon mx-auto mb-3">
+            </span>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <h4>
               <p>UMW Young Democrats</p>
