--- a/index.html
+++ b/index.html
@@ -152,27 +152,25 @@
           <h3 class="text-secondary mb-0"></h3>
           <h2 class="mb-5">Hobbies/Clubs</h2>
         </div>
-        
-           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
             <h4>
-              <p>UMW Young Democrats</p>
+              <strong>UMW Young Democrats</strong>
             </h4>
-               <p>Publicity Chair and Historian</p>
+             <p>Publicity Chair and Historian</p>
             <p class="text-faded mb-0">●Managed all of club's social media accounts</p>
             <p class="text-faded mb-0">●Organized and promoted club events</p>
-            <p class="text-faded mb-0">●Documented any club events</p>
-          </div>
-        
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">      
+            <p class="text-faded mb-0">●Documented all club events</p>
+             </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <h4>
               <p>UMW Radio</p>
             </h4>
-               <p>Talk Show Host</p>
+              <p>Talk Show Host</p>
             <p class="text-faded mb-0">●Host of a weekly radio show</p>
-            <p class="text-faded mb-0">●Planned topics and organized content to disscus on show</p>
+            <p class="text-faded mb-0">●Planned topics and organized content to discuss on show</p>
           </div>
-           </div>
-        </section>
+          </section>
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
