--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <!-- Hobbies/Clubs -->
          <section class="content-section bg-primary text-white text-center" id="hobbies">
       <div class="container">
+        <div class="container text-center">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0"></h3>
           <h2 class="mb-5">Hobbies/Clubs</h2>
