--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             <p class="text-faded mb-0">● Host of a weekly radio show</p>
             <p class="text-faded mb-0">● Planned topics and organized content to discuss on show</p>
           </div>
+          </div>
           </section>
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
