--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>About</h2>
-              <p class= "lead mb-5"> Education: University of Mary Washington, Fredericksburg, VA Scheduled Graduation May 2018 </p>
+              <p class= "lead mb-5"> Education: University of Mary Washington, Fredericksburg, VA</p>
+            <p class= "lead mb-5"> Scheduled Graduation May 2018 </p>
               <p class= "lead mb-5"> Bachelor of Arts, Communications and Digital Studies Including coursework in Small Group Communications, Digital Storytelling, and Applied Digital Studies. </p>
               <p class="lead mb-5">Communications major with exceptional people skills, experience in social media media management, and digital design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
             
