--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                <p> Sterling, VA September 2015 – December 2016</p>
             <p class="text-faded mb-0">● Office administration</p>
             <p class="text-faded mb-0">● Provided excellent customer service interaction with firm’s clients</p>
-            <p class="text-faded mb-0">● Established case storage and closing of case files</p>
+            <p class="text-faded mb-0">● Established case storage and closed case files</p>
             <p class="text-faded mb-0">● Answered all incoming communication and routed them to the appropriate staff</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
