--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             </h4>
              <p>Manager</p>
               <p> DC, Summer 2016-Present</p>
-            <p class="text-faded mb-0">● Organized shows for the band to play</p>
+            <p class="text-faded mb-0">● Organized the band’s performances</p>
             <p class="text-faded mb-0">● Answered Incoming communications that the band would recive through various social medias</p>
-            <p class="text-faded mb-0">● Organized and checked times and locations where band would play</p>
+            <p class="text-faded mb-0">● Organized and validated venues for the band’s performances</p>
              </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon mx-auto mb-3">
@@ -155,6 +155,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6">
+            <center>
             <h4>
               <strong>UMW Young Democrats</strong>
             </h4>
@@ -170,6 +171,7 @@
               <p>Talk Show Host</p>
             <p class="text-faded mb-0">● Host of a weekly radio show</p>
             <p class="text-faded mb-0">● Planned topics and organized content to discuss on show</p>
+            </center>
           </div>
           </div>
           </section>
