--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
           <h2 class="mb-5">Hobbies/Clubs</h2>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <center>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <h4>
               <strong>UMW Young Democrats</strong>
             </h4>
@@ -171,7 +170,6 @@
               <p>Talk Show Host</p>
             <p class="text-faded mb-0">● Host of a weekly radio show</p>
             <p class="text-faded mb-0">● Planned topics and organized content to discuss on show</p>
-            </center>
           </div>
           </div>
           </section>
