--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
     <!-- Hobbies/Clubs -->
          <section class="content-section bg-primary text-white text-center" id="hobbies">
-      <div class="container" id="center">
+      <div class="container" style="justifyContent: center">
         <div class="container text-center">
         <div class="content-section-heading">
           <h2 class="mb-5">Hobbies/Clubs</h2>
