--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <div class="col-lg-10 mx-auto">
             <h2>About</h2>
               <p class= "lead mb-5"> Education: University of Mary Washington, Fredericksburg, VA</p>
-            <p class= "lead mb-5"> Scheduled Graduation May 2018 </p>
-              <p class= "lead mb-5"> Bachelor of Arts, Communications and Digital Studies Including coursework in Small Group Communications, Digital Storytelling, and Applied Digital Studies. </p>
+            <p class= "lead mb-5"> Graduated May 2018 </p>
+              <p class= "lead mb-5"> Bachelor of Arts, Communications and Digital Studies Including coursework in Small Group Communications, Digital Storytelling, Social Media Management, and Applied Digital Studies. </p>
               <p class="lead mb-5">Communications major with exceptional people skills, experience in social media media management, and digital design. Highly organized and extremely passionate. Experienced taking initiative and completing self-guided tasks. </p> 
             
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Check out my job history!</a>
@@ -146,33 +146,6 @@
             <p class="text-faded mb-0">● Utilized skills of multitasking, conflict resolution, and maintaining a positive attitude</p>
           </div>
     </section>
-    <!-- Hobbies/Clubs -->
-         <section class="content-section bg-primary text-white text-center" id="hobbies">
-      <div class="container" style="text-align: center">
-        <div class="container text-center">
-        <div class="content-section-heading">
-          <h2 class="mb-5">Hobbies/Clubs</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <h4>
-              <strong>UMW Young Democrats</strong>
-            </h4>
-             <p>Publicity Chair and Historian</p>
-            <p class="text-faded mb-0">● Managed all of club's social media accounts</p>
-            <p class="text-faded mb-0">● Organized and promoted club events</p>
-            <p class="text-faded mb-0">● Documented all club events</p>
-             </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <h4>
-              <p>UMW Radio</p>
-            </h4>
-              <p>Talk Show Host</p>
-            <p class="text-faded mb-0">● Host of a weekly radio show</p>
-            <p class="text-faded mb-0">● Planned topics and organized content to discuss on show</p>
-          </div>
-          </div>
-          </section>
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
